@@ -19,30 +19,29 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02111-1301  USA
  */
 
+#include <glib.h>
 #include <stdlib.h>
 #include <stdint.h>
 #include <stdio.h>
 #include <string.h>
-#include <glib.h>
+#include <purple.h>
 
-#include "../account.h"
-#include "../conversation.h"
-#include "../xmlnode.h"
-#include "../protocols/jabber/jutil.h"
+#include "../util.h"
 
 int LLVMFuzzerTestOneInput(const uint8_t *data, size_t size);
 
-int LLVMFuzzerTestOneInput(const uint8_t *data, size_t size) {
-	char *malicious_jid = g_new0(char, size + 1);
+int
+LLVMFuzzerTestOneInput(const uint8_t *data, size_t size) {
+	gchar *malicious_mime = g_new0(gchar, size + 1);
+	gchar *result = NULL;
 
-	memcpy(malicious_jid, data, size);
-	malicious_jid[size] = '\0';
+	memcpy(malicious_mime, data, size);
+	malicious_mime[size] = '\0';
 
-	JabberID *jid = jabber_id_new(malicious_jid);
+	result = purple_mime_decode_field(malicious_mime);
+	g_free(result);
 
-	jabber_id_free(jid);
-
-	g_free(malicious_jid);
+	g_free(malicious_mime);
 
 	return 0;
 }
